# personal

DesignPatterns/: CMakeLists.txt
Ola/cpp/: CMakeLists.txt  main.cpp
Ola/cpp/subdir/: CMakeLists.txt  excel_changer.cpp  excel_changer.hpp
Ola/files/: IOA_BALAS.xlsx  IOA_BALAS_FORMATED.xlsx  IOA_CHRZASTEK.xlsx  IOA_CHRZASTEK_FORMATED.xlsx  IOA_CZUCZMAN.xlsx  IOA_CZUCZMAN_FORMATED.xlsx  IOA_FRACZEK.xlsx  IOA_FRACZEK_FORMATED.xlsx  IOA_GAIDZIK.xlsx  IOA_GAIDZIK_FORMATED.xlsx  IOA_GALKOWSKI.xlsx  IOA_GALKOWSKI_FORMATED.xlsx  IOA_GORACY.xlsx  IOA_GORACY_FORMATED.xlsx  IOA_GORZALA.xlsx  IOA_GORZALA_FORMATED.xlsx  IOA_IWASZKO.xlsx  IOA_IWASZKO_FORMATED.xlsx  IOA_KUBIAK.xlsx  IOA_KUBIAK_FORMATED.xlsx  IOA_KWAPISZ.xlsx  IOA_KWAPISZ_FORMATED.xlsx  IOA_MIKOLAJEWSKA.xlsx  IOA_MIKOLAJEWSKA_FORMATED.xlsx  IOA_NAZARKIEWICZ.xlsx  IOA_NAZARKIEWICZ_FORMATED.xlsx  IOA_OSADNIK.xlsx  IOA_OSADNIK_FORMATED.xlsx  IOA_PALAC.xlsx  IOA_PALAC_FORMATED.xlsx  IOA_PASIEK.xlsx  IOA_PASIEK_FORMATED.xlsx  IOA_PIOTROWSKI.xlsx  IOA_PIOTROWSKI_FORMATED.xlsx  IOA_RYCHTER.xlsx  IOA_RYCHTER_FORMATED.xlsx  IOA_STAWECKA.xlsx  IOA_STAWECKA_FORMATED.xlsx  IOA_SZCZYPIOR.xlsx  IOA_SZCZYPIOR_FORMATED.xlsx  (+13 more)
Ola/ola doktorat/: BALAS. Wspólna Ocena. Wszystkie okolice..xlsx  CZUCZMAN Barbara. Ocena Wspólna. Wszystkie okolice..xlsx  FRĄCZEK. Wspólna Ocena. Wszystkie okolice..xlsx  GAIDZIK. Wspólna Ocena. Wszystkie okolice..xlsx  GAŁKOWSKI. Wspólna ocena. Wszystkie okolice..xlsx  GORZAŁA. Wspólna Ocena.Wszystkie okolice.xlsx  GORĄCY. Wspólna Ocena. Wszyskie okolice. (1).xlsx  main.cpp  (+18 more)
(+13 files in other folders)
